Fixed Ticket #565 - "overflow: overflow" should have been "overflow: visible". word-wrap is a css3 property which is correctly dropped by earlier parsers - not a bug.
svn path=/trunk/boinc/; revision=16052

--- a/html/user/white.css
+++ b/html/user/white.css
@@ -303,7 +303,7 @@ blockquote.postbody {
 #thread {
     width: 100%;
     table-layout: fixed;
-    overflow: overflow;
+    overflow: visible;
     word-wrap: break-word;
 }
 
